[package]
name = "kahva"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
eframe = "0.31.0"
egui = "0.31.0"
futures-executor = "0.3.31"
jj-cli = { version = "0.27.0", default-features = false, features = ["git"] }
jj-lib = { version = "0.27.0", default-features = false, features = ["git"] }
sapling-renderdag = "0.1.0"

[patch.crates-io]
jj-cli = { path = "../jj/cli" }
jj-lib = { path = "../jj/lib" }

[profile.dev.package."*"]
opt-level = 2