[package]
name = "kahva"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui = "0.31"
futures-executor = "0.3"
jj-cli = { version = "0.27", default-features = false, features = ["git"] }
jj-lib = { version = "0.27", default-features = false, features = ["git"] }
chrono = "0.4"
sapling-renderdag = "0.1"

[patch.crates-io]
jj-cli = { git = "https://github.com/jakobhellermann/jj", branch = "pub-kahva" }
jj-lib = { git = "https://github.com/jakobhellermann/jj", branch = "pub-kahva" }
# jj-cli = { path = "../jj/cli" }
# jj-lib = { path = "../jj/lib" }

[profile.dev.package."*"]
opt-level = 2
